--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>COVID-19</title>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_fiori_3_dark"
+			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{"corona.virus": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
